# MiniRT

./: CMakeLists.txt  Makefile  README.md  my_colors.c  my_hooks.c  my_hooks2.c  my_manager_camera.c  my_manager_lib.c  my_manager_lib2.c  my_manager_light.c  my_manager_render.c  my_manager_render2.c  my_manager_render_cyl.c  my_manager_render_cyl2.c  my_manager_render_cyl3.c  my_manager_render_pl.c  my_manager_render_pl2.c  my_manager_render_sp.c  my_manager_render_sp2.c  my_minirt.c  my_minirt.h  my_parser.c  my_parser.h  my_parser2.c  my_parser3.c  my_parser4.c  my_parser_test.c  my_setdata.c  my_shadow.c  my_shadow2.c  my_transform.c  my_transform2.c  my_vector.c  my_vector.h  my_vector2.c  my_vector3.c  test.txt  test2.txt  test3.txt
libs/: CMakeLists.txt  ft_atoi.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_strlen.c  ft_strncmp.c  my_global_libs.h
libs/minilibx_macos/: CMakeLists.txt
